@@ -1,3 +1,4 @@
+Fixed an issue with grabbing the bottom of the beaker when it is stacked on top of a block.
 Internationalized the strings.
 Changed the z-order of the light bulbs and beaker so that light energy chunks from the sun go behind them.
 Put carousels on 2nd tab on separate clock so that they still operate when tab is paused.
